# Notflix-v4.0

./: .gitignore  .gitkeep  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.json
data/: data.txt
src/: OutputName
src/NodeJS/: app.js  docker-compose.yml  dockerfile  package-lock.json  package.json
src/NodeJS/controllers/: category.js  movie.js  user.js
src/NodeJS/middleware/: adminAuth  auth.js
src/NodeJS/models/: category.js  movie.js  user.js
src/NodeJS/routes/: category.js  movie.js  token.js  user.js
src/NodeJS/services/: category.js  globalId.js  movie.js  user.js
src/commands/: AddCommand.cpp  AddCommand.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  PatchCommand.cpp  PatchCommand.h  PostCommand.cpp  PostCommand.h
src/core/: App.cpp  App.h  main.cpp
src/managers/: CLIManager.cpp  CLIManager.h  DatabaseIO.h  FileManager.cpp  FileManager.h  IOManager.h
src/mobile-app/Notflix/: settings.gradle.kts
src/mobile-app/Notflix/app/: build.gradle.kts
src/mobile-app/Notflix/app/src/main/: AndroidManifest.xml
src/mobile-app/Notflix/app/src/main/res/layout/: activity_home.xml  activity_login.xml  activity_main.xml  activity_movie_info.xml  activity_search.xml  activity_signup.xml  activity_watch.xml  category_item.xml  item_category.xml  item_movie.xml  movie_item.xml
src/mobile-app/Notflix/app/src/main/res/menu/: home_toolbar.xml
src/mobile-app/Notflix/app/src/main/res/values-night/: colors.xml  themes.xml
src/mobile-app/Notflix/gradle/: libs.versions.toml
src/mobile-app/Notflix/gradle/wrapper/: gradle-wrapper.properties
src/networking/: Dockerfile  Server.cpp  Server.h  SocketManager.cpp  SocketManager.h  ThreadPool.cpp  ThreadPool.h  client.py
src/react-frontend/: dockerfile  package-lock.json  package.json
src/react-frontend/public/: index.html
src/react-frontend/src/: HomePage.css  HomePage.js  Login.css  Login.js  admin.css  admin.js  home.auth.css  home.auth.js  home.unauth.css  home.unauth.js  index.js  login.css  login.js  moviePopup.js  search.css  search.js  signup.css  signup.js  videoPlayer.css  videoPlayer.js
src/react-frontend/src/components/: moviePopup.css  moviePopup.js  navbar.css  navbar.js
src/utils/: Utility.cpp  Utility.h
tests/: CMakeLists.txt  TestRunner.cpp
tests/test files/: CLIManagerTest.cpp  FileManagerTest.cpp  GetCommandTest.cpp  HelpCommandTest.cpp  PatchCommandTest.cpp  PostCommandTest.cpp  UtilityTest.cpp
(+109 files in other folders)
